# Analisys-IBGE

./: presentation.py  pyproject.toml  requirements.txt  style.css
data/populacao_municipios/: Censo 2022 - População residente - Municípios.xlsx
notebooks/: data_analysis.ipynb
pages/: 1_Impressions.py  2_Analysis.py  3_BI_Maps.py
