[project]
name = "analysisibge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[dataframe]>=2025.10.0",
    "folium>=0.20.0",
    "gender-guesser-br>=1.1.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "streamlit>=1.51.0",
    "tqdm>=4.67.1",
]
